--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Welcome to <span>Movie World</span></h1>
         <form id="login-form">
             <input type="email" id="email" placeholder="Enter your email" required>
-            <input type="password" id="password" placeholder="Enter your password" required>
+            <input type="password" id="password" placeholder="Create a new password" required>
             <button type="submit">Login</button>
         </form>
     </div>
