--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Login Page -->
     <div id="login-page">
-        <h1>Welcome to <span>Movie World</span></h1>
+        <h1>Welcome to <span>Frame Tales</span></h1>
         <form id="login-form">
             <input type="email" id="email" placeholder="Enter your email" required>
             <input type="password" id="password" placeholder="Create a new password" required>
@@ -63,7 +63,7 @@
         </section>
         <section id="contact" class="hidden">
             <h2>Contact Us</h2>
-            <p>Email: support@movieworld.com</p>
+            <p>Email: support@FrameTales.com</p>
             <p>Phone: +124124124</p>
         </section>
     </div>
