--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="slider-container">
                 <!-- Movie 1 -->
                 <div class="movie">
-                    <a href="https://drive.usercontent.google.com/download?id=1p4ozf79AgXaHuCm66dJ1ZucZFxgK5qY4&authuser=0" target="_blank">
+                    <a href="https://sharedrive.skin/file/WcWsSBIgMt" target="_blank">
                         <img src="bad news.jpg" alt="Bad News">
                     </a>
                     <p>Bad News</p>
@@ -50,7 +50,7 @@
 
                 <!-- Movie 3 -->
                 <div class="movie">
-                    <a href="https://drive.usercontent.google.com/download?id=123tFnLlkco2XsVlH0rAe0XHwWvhvY35W&authuser=0" target="_blank">
+                    <a href="https://sharedrive.skin/file/kvMp6dEFuA" target="_blank">
                         <img src="baahubai 2.jpg" alt="Baahubali 2">
                     </a>
                     <p>Baahubali 2</p>
